--- a/index.html
+++ b/index.html
@@ -4,11 +4,17 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="og:title" content="Company" />
+		<meta name="og:description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid." />
+		<meta name="keywords" content="Company, website" />
+		<meta name="author" content="Ergashev Firdavs" />
+		<meta
 		<title>Document</title>
 		<link rel="stylesheet" href="../styles/main.css" />
 		<link rel="stylesheet" href="../styles/global.css" />
 	</head>
 	<body>
+		
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
 			<div class="navbar__container">
@@ -57,16 +63,7 @@
 
 	<button id="myButton">click</button>
 
-	<script text="type/javascript">
-		const $ = (query) => {
-			return document.querySelector(query);
-		};
 
-		window.location.href.replace(
-			"http://127.0.0.1:5500/pages/index.html",
-			"http://127.0.0.1:5500/"
-		);
-	</script>
-	<script src="../js/helper.js"></script>
-	<script src="../js/main.js"></script>
+	<script type="module" src="../js/helper.js"></script>
+	<script type="module" src="../js/main.js"></script>
 </html>
