--- a/portfolio.html
+++ b/portfolio.html
@@ -5,18 +5,16 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
+		<meta name="og:description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid." />
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
-		<meta />
-		<title>Document</title>
-		<link rel="stylesheet" href="../styles/main.css" />
+		<meta
+		<title>Documents</title>
+		<link rel="stylesheet" href="../styles/portfolio.css" />
 		<link rel="stylesheet" href="../styles/global.css" />
 	</head>
 	<body>
+		
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
 			<div class="navbar__container">
@@ -26,13 +24,15 @@
 				<div class="navbar__menu">
 					<ul class="navbar__menu-list">
 						<li class="navbar__menu-item">
-							<a href="/" class="navbar__menu-link">Home</a>
+							<a href="../index.html" class="navbar__menu-link">Home</a>
 						</li>
 						<li class="navbar__menu-item">
-							<a href="/about" class="navbar__menu-link">About</a>
+							<a href="about.html" class="navbar__menu-link">About</a>
 						</li>
 						<li class="navbar__menu-item">
-							<a href="/contacts" class="navbar__menu-link">Contact</a>
+							<a href="../contact/index.html" class="navbar__menu-link"
+								>Contact</a
+							>
 						</li>
 					</ul>
 				</div>
@@ -62,6 +62,7 @@
 	</body>
 
 	<button id="myButton">click</button>
+
 
 	<script type="module" src="../js/helper.js"></script>
 	<script type="module" src="../js/main.js"></script>
