about page is set up for dynamic use

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
 		<meta name="author" content="Ergashev Firdavs" />
 		<meta />
 		<title>Document</title>
-		<link rel="stylesheet" href="../styles/main.css" />
 		<link rel="stylesheet" href="../styles/global.css" />
+		<link rel="stylesheet" href="../styles/main.css" />
 	</head>
 	<body>
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
-			<div class="navbar__container">
-				<div class="navbarLogo">
-					<a href="/" class="logo_child">Firdavs</a>
+			<div class="navbar-container">
+				<div class="navbar-logo">
+					<a href="/" class="logo-child">Firdavs</a>
 				</div>
-				<div class="navbar__menu">
-					<ul class="navbar__menu-list">
-						<li class="navbar__menu-item">
-							<a href="/" class="navbar__menu-link">Home</a>
+				<div class="navbar-menu">
+					<ul class="navbar-menu-list">
+						<li class="navbar-menu-item">
+							<a href="/" class="navbar-menu-link">Home</a>
 						</li>
-						<li class="navbar__menu-item">
-							<a href="/about" class="navbar__menu-link">About</a>
+						<li class="navbar-menu-item">
+							<a href="/about" class="navbar-menu-link">About</a>
 						</li>
-						<li class="navbar__menu-item">
-							<a href="/contacts" class="navbar__menu-link">Contact</a>
+						<li class="navbar-menu-item">
+							<a href="/contacts" class="navbar-menu-link">Contact</a>
 						</li>
 					</ul>
 				</div>
@@ -41,27 +41,27 @@
 
 		<!-- banner -->
 		<div class="banner">
-			<div class="container">
-				<div class="banner-content">
-					<h1>
-						Best <span>Online</span> <br />
-						Education
-					</h1>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-						quod.
-					</p>
-				</div>
-				<img
-					class="arrowBottom"
-					src="../images/down-arrow.png"
-					alt="arrowBottom"
-				/>
+			<div class="banner-content">
+				<h1 style="font-size: 50px; line-height: 2px; width: full">
+					Best <span>Online</span>
+					Education
+				</h1>
+				<p style="font-size: 30px; width: 50%">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
+					quod.
+				</p>
 			</div>
+			<img
+				class="arrowBottom"
+				src="../images/down-arrow.png"
+				alt="arrowBottom"
+			/>
 		</div>
-	</body>
 
-	<button id="myButton">click</button>
+		<!-- about -->
+
+		<footer>footer</footer>
+	</body>
 
 	<script type="module" src="../js/helper.js"></script>
 	<script type="module" src="../js/main.js"></script>
