added dynamic functions

--- a/contacts.html
+++ b/contacts.html
@@ -64,6 +64,6 @@
 	<button id="myButton">click</button>
 
 
-	<script type="module" src="../js/helper.js"></script>
-	<script type="module" src="../js/main.js"></script>
+	<script type="module" src="./js/helper.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </html>
