--- a/about.html
+++ b/about.html
@@ -5,36 +5,39 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="og:title" content="Company" />
-		<meta name="og:description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid." />
+		<meta
+			name="og:description"
+			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+		/>
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
-		<meta
 		<title>About</title>
-		<link rel="stylesheet" href="../styles/global.css" />
-		<link rel="stylesheet" href="../styles/about.css" />
+		<link rel="stylesheet" href="./styles/global.css" />
+		<link rel="stylesheet" href="./styles/about.css" />
 	</head>
 	<body>
-		
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
 			<div class="navbar-container">
 				<div class="navbar-logo">
 					<a href="/" class="logo-child">Firdavs</a>
 				</div>
-				<div class="navbar-menu">
-					<ul class="navbar-menu-list">
-						<li class="navbar-menu-item">
-							<a href="/" class="navbar-menu-link">Home</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="/about" class="navbar-menu-link">About</a>
-						</li>
-						<li class="navbar__menu-item">
-							<a href="/contatcs" class="navbar-menu-link"
-								>Contact</a
-							>
-						</li>
-					</ul>
+				<ul class="navbar-menu-list list">
+					<li class="navbar-menu-item">
+						<a href="/" class="navbar-menu-link">Firdavs</a>
+					</li>
+					<li class="navbar-menu-item">
+						<a href="/" class="navbar-menu-link">Home</a>
+					</li>
+					<li class="navbar__menu-item">
+						<a href="/about" class="navbar-menu-link">About</a>
+					</li>
+					<li class="navbar__menu-item">
+						<a href="/contatcs" class="navbar-menu-link">Contact</a>
+					</li>
+				</ul>
+				<div>
+					<button type="button" class="menu-open" id="toggleMenu">Menu</button>
 				</div>
 			</div>
 		</nav>
@@ -51,16 +54,13 @@
 						perferendis. Quisquam, quae perferendis.
 					</p>
 				</div>
+				<img src="./images/desk.png" alt="" />
 			</div>
-			<img src="" alt="">
-		</div>
 
-		<div class="card-body" id="card-body"></div>
+			<div class="card-body" id="card-body"></div>
+		</div>
 	</body>
 
-	<button id="myButton">click</button>
-
-
-	<script type="module" src="../js/helper.js"></script>
-	<script type="module" src="../js/main.js"></script>
+	<script type="module" src="./js/helper.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </html>
