--- a/index.html
+++ b/index.html
@@ -19,23 +19,21 @@
 	<body>
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
-			<div class="navbar-container">
-				<div class="navbar-logo">
-					<a href="/" class="logo-child">Firdavs</a>
-				</div>
-				<div class="navbar-menu">
-					<ul class="navbar-menu-list">
-						<li class="navbar-menu-item">
-							<a href="/" class="navbar-menu-link">Home</a>
-						</li>
-						<li class="navbar-menu-item">
-							<a href="/about" class="navbar-menu-link">About</a>
-						</li>
-						<li class="navbar-menu-item">
-							<a href="/contacts" class="navbar-menu-link">Contact</a>
-						</li>
-					</ul>
-				</div>
+			<div class="navbar-menu">
+				<ul class="navbar-menu-list" id="menu">
+					<li class="navbar-menu-item">
+						<a href="/" class="navbar-menu-link">Firdavs</a>
+					</li>
+					<li class="navbar-menu-item">
+						<a href="/" class="navbar-menu-link">Home</a>
+					</li>
+					<li class="navbar-menu-item">
+						<a href="/about" class="navbar-menu-link">About</a>
+					</li>
+					<li class="navbar-menu-item">
+						<a href="/contacts" class="navbar-menu-link">Contact</a>
+					</li>
+				</ul>
 			</div>
 		</nav>
 
@@ -63,6 +61,6 @@
 		<footer>footer</footer>
 	</body>
 
-	<script type="module" src="../js/helper.js"></script>
-	<script type="module" src="../js/main.js"></script>
+	<script type="module" src="./js/helper.js"></script>
+	<script type="module" src="./js/main.js"></script>
 </html>
