--- a/products.html
+++ b/products.html
@@ -9,28 +9,28 @@
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
 		<meta
-		<title>Documents</title>
-		<link rel="stylesheet" href="../styles/portfolio.css" />
+		<title>About</title>
 		<link rel="stylesheet" href="../styles/global.css" />
+		<link rel="stylesheet" href="../styles/about.css" />
 	</head>
 	<body>
 		
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
-			<div class="navbar__container">
-				<div class="navbarLogo">
-					<a href="/" class="logo_child">Firdavs</a>
+			<div class="navbar-container">
+				<div class="navbar-logo">
+					<a href="/" class="logo-child">Firdavs</a>
 				</div>
-				<div class="navbar__menu">
-					<ul class="navbar__menu-list">
-						<li class="navbar__menu-item">
-							<a href="../index.html" class="navbar__menu-link">Home</a>
+				<div class="navbar-menu">
+					<ul class="navbar-menu-list">
+						<li class="navbar-menu-item">
+							<a href="/" class="navbar-menu-link">Home</a>
 						</li>
 						<li class="navbar__menu-item">
-							<a href="about.html" class="navbar__menu-link">About</a>
+							<a href="/about" class="navbar-menu-link">About</a>
 						</li>
 						<li class="navbar__menu-item">
-							<a href="../contact/index.html" class="navbar__menu-link"
+							<a href="/contatcs" class="navbar-menu-link"
 								>Contact</a
 							>
 						</li>
@@ -41,24 +41,21 @@
 
 		<!-- banner -->
 		<div class="banner">
-			<div class="container">
+			<div class="banner-container">
 				<div class="banner-content">
-					<h1>
-						Best <span>Online</span> <br />
-						Education
-					</h1>
-					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-						quod.
+					<h1 class="banner-title">About</h1>
+					<p class="banner-text">
+						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+						quod, voluptatum, quae, voluptas quibusdam voluptates quia
+						accusantium quidem voluptatibus quos quas. Quisquam, quae
+						perferendis. Quisquam, quae perferendis.
 					</p>
 				</div>
-				<img
-					class="arrowBottom"
-					src="../images/down-arrow.png"
-					alt="arrowBottom"
-				/>
 			</div>
+			<img src="" alt="">
 		</div>
+
+		<div class="card-body" id="card-body"></div>
 	</body>
 
 	<button id="myButton">click</button>
