--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,9 @@
 					<li class="navbar__menu-item">
 						<a href="/contatcs" class="navbar-menu-link">Contact</a>
 					</li>
+					<li class="navbar__menu-item">
+						<a href="/portfolio" class="navbar-menu-link">Portfolio</a>
+					</li>
 				</ul>
 				<div>
 					<button type="button" class="menu-open" id="toggleMenu">Menu</button>
