--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<a href="/about" class="navbar-menu-link">About</a>
 					</li>
 					<li class="navbar__menu-item">
-						<a href="/contatcs" class="navbar-menu-link">Contact</a>
+						<a href="/contacts" class="navbar-menu-link">Contact</a>
 					</li>
 					<li class="navbar__menu-item">
 						<a href="/portfolio" class="navbar-menu-link">Portfolio</a>
