--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 		<!-- banner -->
 		<div class="banner">
 			<div class="banner-content">
-				<h1 style="font-size: 50px; line-height: 2px; width: full">
+				<h1 style="font-size: 50px; width: full">
 					Best <span>Online</span>
 					Education
 				</h1>
-				<p style="font-size: 30px; width: 50%">
+				<p style="font-size: 30px; width: 50%; margin-top: -4px">
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
 					quod.
 				</p>
@@ -66,8 +66,6 @@
 		</div>
 
 		<!-- about -->
-
-		<footer>footer</footer>
 	</body>
 
 	<script type="module" src="./js/helper.js"></script>
