--- a/courses.html
+++ b/courses.html
@@ -13,7 +13,7 @@
 		<meta name="author" content="Ergashev Firdavs" />
 		<title>About</title>
 		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/about.css" />
+		<link rel="stylesheet" href="./styles/courses.css" />
 	</head>
 	<body>
 		<!-- navbar with pure css  -->
@@ -65,24 +65,18 @@
 
 		<!-- banner -->
 		<div class="banner">
-			<div class="banner-container">
-				<div class="banner-content">
-					<h1 class="banner-title">About</h1>
-					<p class="banner-text">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-						quod, voluptatum, quae, voluptas quibusdam voluptates quia
-						accusantium quidem voluptatibus quos quas. Quisquam, quae
-						perferendis. Quisquam, quae perferendis.
-					</p>
-				</div>
-				<img src="./images/desk.png" alt="" />
+			<div class="container">
+				<p>English</p>
+				<div class="project" id="project-en"></div>
 			</div>
-
-			<div class="card-body" id="card-body"></div>
+			<div class="container">
+				<p>Math</p>
+				<div class="project" id="project-math"></div>
+			</div>
 		</div>
 	</body>
 
 	<script type="module" src="./js/helper.js"></script>
 	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/about.js"></script>
+	<script type="module" src="./js/courses.js"></script>
 </html>
