--- a/index.html
+++ b/index.html
@@ -11,35 +11,52 @@
 		/>
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
-		<meta />
 		<title>Document</title>
-		<link rel="stylesheet" href="../styles/global.css" />
-		<link rel="stylesheet" href="../styles/main.css" />
+		<link rel="stylesheet" href="./styles/global.css" />
+		<link rel="stylesheet" href="./styles/main.css" />
 	</head>
 	<body>
 		<!-- navbar with pure css  -->
 		<nav class="navbar">
 			<div class="navbar-container">
 				<div class="navbar-logo">
-					<a href="/" class="logo-child">Firdavs</a>
+					<a href="/" class="logo-child">Educator</a>
 				</div>
 				<ul class="navbar-menu-list list">
-					<li class="navbar-menu-item">
-						<a href="/" class="navbar-menu-link">Firdavs</a>
-					</li>
 					<li class="navbar-menu-item">
 						<a href="/" class="navbar-menu-link">Home</a>
 					</li>
 					<li class="navbar__menu-item">
 						<a href="/about" class="navbar-menu-link">About</a>
 					</li>
+
 					<li class="navbar__menu-item">
-						<a href="/contacts" class="navbar-menu-link">Contact</a>
+						<a href="/courses" class="navbar-menu-link">Courses</a>
 					</li>
 					<li class="navbar__menu-item">
-						<a href="/portfolio" class="navbar-menu-link">Portfolio</a>
+						<a href="/contacts" class="navbar-menu-link">Contacts</a>
 					</li>
+					<li class="navbar__menu-item">
+						<a href="/stuff" class="navbar-menu-link">Stuff</a>
+					</li>
+
+					<div class="btn-group-list" style="display: none">
+						<button type="button" class="login-login">
+							<a href="/login">Sign in</a>
+						</button>
+						<button type="button" class="login-register">
+							<a href="/login">Sign up</a>
+						</button>
+					</div>
 				</ul>
+				<div class="btn-group">
+					<button type="button" class="login-login">
+						<a href="/login">Sign in</a>
+					</button>
+					<button type="button" class="login-register">
+						<a href="/login">Sign up</a>
+					</button>
+				</div>
 				<div>
 					<button type="button" class="menu-open" id="toggleMenu">Menu</button>
 				</div>
