--- a/stuff.html
+++ b/stuff.html
@@ -12,8 +12,8 @@
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
 		<title>About</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/about.css" />
+		<link rel="stylesheet" href="../styles/global.css" />
+		<link rel="stylesheet" href="../styles/stuff.css" />
 	</head>
 	<body>
 		<!-- navbar with pure css  -->
@@ -66,23 +66,17 @@
 		<!-- banner -->
 		<div class="banner">
 			<div class="banner-container">
-				<div class="banner-content">
-					<h1 class="banner-title">About</h1>
-					<p class="banner-text">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-						quod, voluptatum, quae, voluptas quibusdam voluptates quia
-						accusantium quidem voluptatibus quos quas. Quisquam, quae
-						perferendis. Quisquam, quae perferendis.
-					</p>
+				<div class="banner-content" id="banner-content">
+					<h1 class="banner-title">Our staff</h1>
 				</div>
-				<img src="./images/desk.png" alt="" />
 			</div>
-
-			<div class="card-body" id="card-body"></div>
+			<img src="" alt="" />
 		</div>
+
+		<div class="card-body" id="card-body"></div>
 	</body>
 
 	<script type="module" src="./js/helper.js"></script>
 	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/about.js"></script>
+	<script type="module" src="./js/stuff.js"></script>
 </html>
