--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 							<a href="/login">Sign in</a>
 						</button>
 						<button type="button" class="login-register">
-							<a href="/login">Sign up</a>
+							<a href="/register">Sign up</a>
 						</button>
 					</div>
 				</ul>
