--- a/register.html
+++ b/register.html
@@ -54,7 +54,7 @@
 						<a href="/login">Sign in</a>
 					</button>
 					<button type="button" class="login-register">
-						<a href="/login">Sign up</a>
+						<a href="/register">Sign up</a>
 					</button>
 				</div>
 				<div>
