index page updated

--- a/index.html
+++ b/index.html
@@ -1,90 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
-		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
-		<title>Document</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/main.css" />
-	</head>
-	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar">
-			<div class="navbar-container">
-				<div class="navbar-logo">
-					<a href="/" class="logo-child">Educator</a>
-				</div>
-				<ul class="navbar-menu-list list">
-					<li class="navbar-menu-item">
-						<a href="/" class="navbar-menu-link">Home</a>
-					</li>
-					<li class="navbar__menu-item">
-						<a href="/about" class="navbar-menu-link">About</a>
-					</li>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Educator Learning Center" />
+    <meta
+      name="og:description"
+      content="Official Website of the Educator Learning Center"
+    />
+    <meta name="keywords" content="Educator, website" />
+    <meta name="author" content="00013622" />
+    <title>Educator LC</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/main.css" />
+  </head>
+  <body>
+    <!-- navbar with pure css  -->
+    <nav class="navbar">
+      <div class="navbar-container">
+        <div class="navbar-logo">
+          <a href="/" class="logo-child">Educator</a>
+        </div>
+        <ul class="navbar-menu-list list">
+          <li class="navbar-menu-item">
+            <a href="/" class="navbar-menu-link">Home</a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="/about" class="navbar-menu-link">About</a>
+          </li>
 
-					<li class="navbar__menu-item">
-						<a href="/courses" class="navbar-menu-link">Courses</a>
-					</li>
-					<li class="navbar__menu-item">
-						<a href="/contacts" class="navbar-menu-link">Contacts</a>
-					</li>
-					<li class="navbar__menu-item">
-						<a href="/stuff" class="navbar-menu-link">Stuff</a>
-					</li>
+          <li class="navbar__menu-item">
+            <a href="/courses" class="navbar-menu-link">Courses</a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="/contacts" class="navbar-menu-link">Contacts</a>
+          </li>
+          <li class="navbar__menu-item">
+            <a href="/stuff" class="navbar-menu-link">Stuff</a>
+          </li>
 
-					<div class="btn-group-list" style="display: none">
-						<button type="button" class="login-login">
-							<a href="/login">Sign in</a>
-						</button>
-						<button type="button" class="login-register">
-							<a href="/register">Sign up</a>
-						</button>
-					</div>
-				</ul>
-				<div class="btn-group">
-					<button type="button" class="login-login">
-						<a href="/login">Sign in</a>
-					</button>
-					<button type="button" class="login-register">
-						<a href="/register">Sign up</a>
-					</button>
-				</div>
-				<div>
-					<button type="button" class="menu-open" id="toggleMenu">Menu</button>
-				</div>
-			</div>
-		</nav>
+          <div class="btn-group-list" style="display: none">
+            <button type="button" class="login-login">
+              <a href="/login">Sign in</a>
+            </button>
+            <button type="button" class="login-register">
+              <a href="/register">Sign up</a>
+            </button>
+          </div>
+        </ul>
+        <div class="btn-group">
+          <button type="button" class="login-login">
+            <a href="/login">Sign in</a>
+          </button>
+          <button type="button" class="login-register">
+            <a href="/register">Sign up</a>
+          </button>
+        </div>
+        <div>
+          <button type="button" class="menu-open" id="toggleMenu">Menu</button>
+        </div>
+      </div>
+    </nav>
 
-		<!-- banner -->
-		<div class="banner">
-			<div class="banner-content">
-				<h1 style="font-size: 50px; width: full">
-					Best <span>Online</span>
-					Education
-				</h1>
-				<p style="font-size: 30px; width: 50%; margin-top: -4px">
-					Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-					quod.
-				</p>
-			</div>
-			<img
-				class="arrowBottom"
-				src="../images/down-arrow.png"
-				alt="arrowBottom"
-			/>
-		</div>
+    <!-- banner -->
+    <div class="banner">
+      <div class="banner-content">
+        <h1 style="font-size: 50px; width: full">
+          Welcome to <span>Educator Learning Center</span>
+        </h1>
+        <p style="font-size: 25px; width: 60%; margin-top: -8px">
+          This website was created to fulfill Web Technology module's
+          requirements and does not represent an actual company or service
+        </p>
+      </div>
+      <img
+        class="arrowBottom"
+        src="../images/down-arrow.png"
+        alt="arrowBottom"
+      />
+    </div>
 
-		<!-- about -->
-	</body>
+    <!-- about -->
+  </body>
 
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/helper.js"></script>
+  <script type="module" src="./js/main.js"></script>
 </html>
