UI part of the website is updated and added more functionality to support native browsing

--- a/404.html
+++ b/404.html
@@ -16,9 +16,6 @@
 		<link rel="stylesheet" href="./styles/main.css" />
 	</head>
 	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar" id="navbar"></nav>
-
 		<!-- banner -->
 		<div class="banner">
 			<div class="banner-content">
@@ -29,19 +26,12 @@
 						background-color: rgb(167, 36, 36);
 					"
 				>
-					Welcome to <span>Educator Learning Center</span>
+					404
 				</h1>
 				<p style="font-size: 23px; width: 60%; margin-top: -8px">
-					This website was created to fulfill Web Technology module's
-					requirements and does not represent an actual company or service
+					Oops! The page you are looking for does not exist. Nice try though!
 				</p>
 			</div>
-			<span class="animate-fade"></span>
 		</div>
-
-		<!-- about -->
 	</body>
-
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
 </html>
