--- a/products.html
+++ b/products.html
@@ -16,29 +16,7 @@
 	<body>
 		
 		<!-- navbar with pure css  -->
-		<nav class="navbar">
-			<div class="navbar-container">
-				<div class="navbar-logo">
-					<a href="/" class="logo-child">Firdavs</a>
-				</div>
-				<ul class="navbar-menu-list list">
-					<li class="navbar-menu-item">
-						<a href="/" class="navbar-menu-link">Firdavs</a>
-					</li>
-					<li class="navbar-menu-item">
-						<a href="/" class="navbar-menu-link">Home</a>
-					</li>
-					<li class="navbar__menu-item">
-						<a href="/about" class="navbar-menu-link">About</a>
-					</li>
-					<li class="navbar__menu-item">
-						<a href="/contatcs" class="navbar-menu-link">Contact</a>
-					</li>
-				</ul>
-				<div>
-					<button type="button" class="menu-open" id="toggleMenu">Menu</button>
-				</div>
-			</div>
+		<nav class="navbar" id="navbar">
 		</nav>
 
 		<!-- banner -->
