--- a/staff.html
+++ b/staff.html
@@ -12,8 +12,8 @@
 		<meta name="keywords" content="Company, website" />
 		<meta name="author" content="Ergashev Firdavs" />
 		<title>About</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/courses.css" />
+		<link rel="stylesheet" href="../styles/global.css" />
+		<link rel="stylesheet" href="../styles/stuff.css" />
 	</head>
 	<body>
 		<!-- navbar with pure css  -->
@@ -21,18 +21,23 @@
 
 		<!-- banner -->
 		<div class="banner">
-			<div class="container">
-				<p style="background-color: rgb(167, 36, 36)">English</p>
-				<div class="project" id="project-en"></div>
+			<div class="banner-container">
+				<div class="banner-content" id="banner-content">
+					<h1
+						class="banner-title"
+						style="background-color: rgb(167, 36, 36); padding: 0.5% 0"
+					>
+						Our staff
+					</h1>
+				</div>
 			</div>
-			<div class="container">
-				<p style="background-color: rgb(167, 36, 36)">Math</p>
-				<div class="project" id="project-math"></div>
-			</div>
+			<img src="" alt="" />
 		</div>
+
+		<div class="card-body" id="card-body"></div>
 	</body>
 
 	<script type="module" src="./js/helper.js"></script>
 	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/courses.js"></script>
+	<script type="module" src="./js/stuff.js"></script>
 </html>
