about page content updated

--- a/about.html
+++ b/about.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
-		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
-		<title>About</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/about.css" />
-	</head>
-	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar" id="navbar"></nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Company" />
+    <meta name="og:description" content="About Educator LC" />
+    <meta name="keywords" content="Company, website" />
+    <meta name="author" content="Ergashev Firdavs" />
+    <title>About</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/about.css" />
+  </head>
+  <body>
+    <!-- navbar with pure css  -->
+    <nav class="navbar" id="navbar"></nav>
 
-		<!-- banner -->
-		<div class="banner">
-			<div class="banner-container">
-				<div class="banner-content">
-					<h1
-						class="banner-title"
-						style="background-color: rgb(167, 36, 36); padding: 0.5% 0"
-					>
-						About
-					</h1>
-					<p class="banner-text">
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam
-						quod, voluptatum, quae, voluptas quibusdam voluptates quia
-						accusantium quidem voluptatibus quos quas. Quisquam, quae
-						perferendis. Quisquam, quae perferendis.
-					</p>
-				</div>
-				<div class="quotes-content"></div>
-			</div>
+    <!-- banner -->
+    <div class="banner">
+      <div class="banner-container">
+        <div class="banner-content">
+          <h1
+            class="banner-title"
+            style="background-color: rgb(167, 36, 36); padding: 0.5% 0"
+          >
+            About
+          </h1>
+          <p class="banner-text">
+            At Educator LC, we have been successfully teaching students English
+            and Math since 2018. Since then, 3,000 students have graduated our
+            courses and are now successfully pursuing their higher education or
+            holding positions in owned and operated companies. All this is due
+            to our strong commitment to quality execution and continuous
+            improvement of our services.
+          </p>
+        </div>
+        <div class="quotes-content"></div>
+      </div>
 
-			<div class="card-body" id="card-body"></div>
-		</div>
-	</body>
+      <div class="card-body" id="card-body"></div>
+    </div>
+  </body>
 
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/about.js"></script>
+  <script type="module" src="./js/helper.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/about.js"></script>
 </html>
