--- a/courses.html
+++ b/courses.html
@@ -1,38 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
-		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
-		<title>About</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/courses.css" />
-	</head>
-	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar" id="navbar"></nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Company" />
+    <meta
+      name="og:description"
+      content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+    />
+    <meta name="keywords" content="Company, website" />
+    <meta name="author" content="00013622" />
+    <title>About</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/courses.css" />
+  </head>
+  <body>
+    <!-- navbar with pure css  -->
+    <nav class="navbar" id="navbar"></nav>
 
-		<!-- banner -->
-		<div class="banner">
-			<div class="container">
-				<p style="background-color: rgb(167, 36, 36)">English</p>
-				<div class="project" id="project-en"></div>
-			</div>
-			<div class="container">
-				<p style="background-color: rgb(167, 36, 36)">Math</p>
-				<div class="project" id="project-math"></div>
-			</div>
-		</div>
-	</body>
+    <!-- banner -->
+    <div class="banner">
+      <div class="container">
+        <p style="background-color: rgb(167, 36, 36)">English</p>
+        <div class="project" id="project-en"></div>
+      </div>
+      <div class="container">
+        <p style="background-color: rgb(167, 36, 36)">Math</p>
+        <div class="project" id="project-math"></div>
+      </div>
+    </div>
+  </body>
 
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/courses.js"></script>
+  <script type="module" src="./js/helper.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/courses.js"></script>
 </html>
