--- a/products.html
+++ b/products.html
@@ -7,7 +7,7 @@
 		<meta name="og:title" content="Company" />
 		<meta name="og:description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid." />
 		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
+		<meta name="author" content="00013622" />
 		<meta
 		<title>About</title>
 		<link rel="stylesheet" href="../styles/global.css" />
