--- a/stuff.html
+++ b/stuff.html
@@ -10,7 +10,7 @@
       content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
     />
     <meta name="keywords" content="Company, website" />
-    <meta name="author" content="Ergashev Firdavs" />
+    <meta name="author" content="00013622" />
     <title>About</title>
     <link rel="stylesheet" href="../styles/global.css" />
     <link rel="stylesheet" href="../styles/stuff.css" />
