--- a/contacts.html
+++ b/contacts.html
@@ -1,73 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
-		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
-		<title>Contacts</title>
-		<link rel="stylesheet" href="./styles/contacts.css" />
-		<link rel="stylesheet" href="./styles/global.css" />
-	</head>
-	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar" id="navbar"></nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Company" />
+    <meta
+      name="og:description"
+      content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+    />
+    <meta name="keywords" content="Company, website" />
+    <meta name="author" content="00013622" />
+    <title>Contacts</title>
+    <link rel="stylesheet" href="./styles/contacts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+  </head>
+  <body>
+    <!-- navbar with pure css  -->
+    <nav class="navbar" id="navbar"></nav>
 
-		<!-- banner -->
-		<div class="banner">
-			<div class="container">
-				<form class="form" id="form">
-					<h1
-						class="banner-title"
-						style="margin-left: 3%; background-color: rgb(167, 36, 36)"
-					>
-						Contact
-					</h1>
+    <!-- banner -->
+    <div class="banner">
+      <div class="container">
+        <form class="form" id="form">
+          <h1
+            class="banner-title"
+            style="margin-left: 3%; background-color: rgb(167, 36, 36)"
+          >
+            Contact
+          </h1>
 
-					<div class="form-group">
-						<label for="name">Name</label>
-						<input
-							type="text"
-							name="name"
-							id="name"
-							required
-							placeholder="Enter your name"
-						/>
-					</div>
-					<div class="form-group">
-						<label for="email">Email</label>
-						<input
-							type="email"
-							name="email"
-							id="email"
-							required
-							placeholder="Enter your email"
-						/>
-					</div>
-					<div class="form-group">
-						<label for="message">Message</label>
-						<textarea
-							name="message"
-							id="message"
-							cols="30"
-							rows="10"
-							required
-							placeholder="Enter your message"
-						></textarea>
-					</div>
-					<button type="submit" class="btn">Send</button>
-				</form>
-			</div>
-		</div>
-	</body>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              name="name"
+              id="name"
+              required
+              placeholder="Enter your name"
+            />
+          </div>
+          <div class="form-group">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              name="email"
+              id="email"
+              required
+              placeholder="Enter your email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="message">Message</label>
+            <textarea
+              name="message"
+              id="message"
+              cols="30"
+              rows="10"
+              required
+              placeholder="Enter your message"
+            ></textarea>
+          </div>
+          <button type="submit" class="btn">Send</button>
+        </form>
+      </div>
+    </div>
+  </body>
 
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/contact.js"></script>
+  <script type="module" src="./js/helper.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/contact.js"></script>
 </html>
