--- a/login.html
+++ b/login.html
@@ -1,56 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
-		<meta
-			name="og:description"
-			content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
-		/>
-		<meta name="keywords" content="Company, website" />
-		<meta name="author" content="Ergashev Firdavs" />
-		<title>Document</title>
-		<link rel="stylesheet" href="./styles/global.css" />
-		<link rel="stylesheet" href="./styles/login.css" />
-	</head>
-	<body>
-		<!-- navbar with pure css  -->
-		<nav class="navbar" id="navbar"></nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="og:title" content="Company" />
+    <meta
+      name="og:description"
+      content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid."
+    />
+    <meta name="keywords" content="Company, website" />
+    <meta name="author" content="00013622" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/login.css" />
+  </head>
+  <body>
+    <!-- navbar with pure css  -->
+    <nav class="navbar" id="navbar"></nav>
 
-		<!-- banner -->
-		<div class="banner">
-			<form class="form" id="form-login">
-				<div class="form-group">
-					<label for="name">Username</label>
-					<input
-						type="text"
-						name="name"
-						id="name"
-						placeholder="Enter your name"
-					/>
-				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-					<input
-						type="password"
-						name="password"
-						id="password"
-						placeholder="Enter your password"
-					/>
-				</div>
-				<button type="submit" class="btn">Login</button>
-				<p style="margin-left: 20px; font-size: 12px">
-					Don't have an account? <a href="/register">Sign up</a>
-				</p>
-			</form>
-		</div>
+    <!-- banner -->
+    <div class="banner">
+      <form class="form" id="form-login">
+        <div class="form-group">
+          <label for="name">Username</label>
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Enter your name"
+          />
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input
+            type="password"
+            name="password"
+            id="password"
+            placeholder="Enter your password"
+          />
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <p style="margin-left: 20px; font-size: 12px">
+          Don't have an account? <a href="/register">Sign up</a>
+        </p>
+      </form>
+    </div>
 
-		<!-- about -->
-	</body>
+    <!-- about -->
+  </body>
 
-	<script type="module" src="./js/helper.js"></script>
-	<script type="module" src="./js/main.js"></script>
-	<script type="module" src="./js/login.js"></script>
+  <script type="module" src="./js/helper.js"></script>
+  <script type="module" src="./js/main.js"></script>
+  <script type="module" src="./js/login.js"></script>
 </html>
