courses page content update

--- a/about.html
+++ b/about.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="og:title" content="Company" />
+    <meta name="og:title" content="Educator LC" />
     <meta name="og:description" content="About Educator LC" />
-    <meta name="keywords" content="Company, website" />
+    <meta name="keywords" content="Educator LC, website" />
     <meta name="author" content="00013622" />
     <title>About</title>
     <link rel="stylesheet" href="./styles/global.css" />
@@ -28,10 +28,11 @@
           </h1>
           <p class="banner-text">
             At Educator LC, we have been successfully teaching students English
-            and Math since 2018. Since then, 3,000 students have graduated our courses and are now successfully pursuing their higher
-            education or holding positions in owned and operated companies. All
-            this is due to our strong commitment to quality execution and
-            continuous improvement of our services.
+            and Math since 2018. Since then, 3,000 students have graduated our
+            courses and are now successfully pursuing their higher education or
+            holding positions in owned and operated companies. All this is due
+            to our strong commitment to quality execution and continuous
+            improvement of our services.
           </p>
         </div>
         <div class="quotes-content"></div>
