--- a/products.html
+++ b/products.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="og:title" content="Company" />
+		<meta name="og:title" content="Educator LC" />
 		<meta name="og:description" content="Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, voluptatum? Pariatur, aliquid." />
-		<meta name="keywords" content="Company, website" />
+		<meta name="keywords" content="Educator LC, website" />
 		<meta name="author" content="00013622" />
 		<meta
-		<title>About</title>
+		<title>Products</title>
 		<link rel="stylesheet" href="../styles/global.css" />
 		<link rel="stylesheet" href="../styles/about.css" />
 	</head>
